<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pharmacy.martin.lab01c2016.MainActivity"
    android:orientation="vertical"
    android:baselineAligned="true"
    android:touchscreenBlocksFocus="true"
    android:textAlignment="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculadora Plazo Fijo"
        android:id="@+id/tvCalculadora"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/tvCorreoElectronico"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editTextEmail"
        android:textSize="18dp"
        android:singleLine="true"
        android:textStyle="italic"
        android:hint="Correo electronico" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuit"
        android:id="@+id/tvCuit"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/tfCuit"
        android:textSize="18dp"
        android:textIsSelectable="false"
        android:singleLine="false"
        android:enabled="true"
        android:textStyle="italic"
        android:hint="Ingrese su CUIT"
        android:theme="@style/Base.AlertDialog.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvImporte"
        android:text="@string/importe"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/tfImporte"
        android:hint="Ingrese el importe"
        android:theme="@style/Base.AlertDialog.AppCompat.Light" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tfDias"
        android:text="@string/cantDias"
        android:textSize="18dp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sbCantDias"
        android:max="365"
        android:indeterminate="false"
        android:progress="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:id="@+id/tvDias"
        android:layout_gravity="center_horizontal"
        android:textSize="14dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/renovar"
        android:id="@+id/chBoxRenovar"
        android:checked="false"
        android:textSize="15dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mkPlazoFijo"
        android:id="@+id/btnConfirmar"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoConfiramción"
        android:id="@+id/tvInfoConfirmacion"
        android:textColorHighlight="#1c2617"
        android:textSize="16dp" />

</LinearLayout>
